catkin_ws/logs/backend/build.make.853.log.stderr
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp: In function ‘int main(int, char**)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:274:4: error: ‘Vector3f’ is not a member of ‘cv’
    cv::Vector3f kpts ; 
    ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:274:4: note: suggested alternatives:
In file included from /usr/include/eigen3/Eigen/Core:294:0,
                 from /usr/include/eigen3/Eigen/Geometry:4,
                 from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Frontend.h:16,
                 from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:14:
/usr/include/eigen3/Eigen/src/Core/Matrix.h:374:34: note:   ‘Eigen::Vector3f’
 typedef Matrix<Type, Size, 1>    Vector##SizeSuffix##TypeSuffix;  \
                                  ^
/usr/include/eigen3/Eigen/src/Core/Matrix.h:386:1: note: in expansion of macro ‘EIGEN_MAKE_TYPEDEFS’
 EIGEN_MAKE_TYPEDEFS(Type, TypeSuffix, 3, 3) \
 ^
/usr/include/eigen3/Eigen/src/Core/Matrix.h:394:1: note: in expansion of macro ‘EIGEN_MAKE_TYPEDEFS_ALL_SIZES’
 EIGEN_MAKE_TYPEDEFS_ALL_SIZES(float,                f)
 ^
/usr/include/eigen3/Eigen/src/Core/Matrix.h:374:34: note:   ‘Eigen::Vector3f’
 typedef Matrix<Type, Size, 1>    Vector##SizeSuffix##TypeSuffix;  \
                                  ^
/usr/include/eigen3/Eigen/src/Core/Matrix.h:386:1: note: in expansion of macro ‘EIGEN_MAKE_TYPEDEFS’
 EIGEN_MAKE_TYPEDEFS(Type, TypeSuffix, 3, 3) \
 ^
/usr/include/eigen3/Eigen/src/Core/Matrix.h:394:1: note: in expansion of macro ‘EIGEN_MAKE_TYPEDEFS_ALL_SIZES’
 EIGEN_MAKE_TYPEDEFS_ALL_SIZES(float,                f)
 ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:274:17: error: expected ‘;’ before ‘kpts’
    cv::Vector3f kpts ; 
                 ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:278:53: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
     for (int i = 0; i < frame.getKeypoints3D().size();i++)
                                                     ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:280:6: error: ‘kpts’ was not declared in this scope
      kpts = frame.getKeypoints3D().at(i); 
      ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:286:37: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
    if (slam.getBadFrameCounter() == badFrameCnt)
                                     ^
make[2]: *** [CMakeFiles/backend.dir/src/main.cpp.o] Error 1
make[1]: *** [CMakeFiles/backend.dir/all] Error 2
make: *** [all] Error 2
